# NASSP

./: .gitignore
Config/GC/: ProjectApollo_LEM.cfg  ProjectApollo_LRV.cfg  ProjectApollo_Saturn5.cfg
Config/ProjectApollo/: Earth.cfg  Earth_VirtualAGC.cfg  Moon.cfg  SaturnSystems.cfg
Doc/Project Apollo - NASSP/Checklists/: Apollo 10 Checklists.xls  Apollo 10 LM Checklists.xls  Apollo 11 Checklists.xls  Apollo 11 LM Checklists.xls  Apollo 12 Checklists.xls  Apollo 12 LM Checklists.xls  Apollo 7 Checklists.xls  Apollo 8 Checklists.xls  Apollo 9 Checklists.xls  Apollo 9 LM Checklists.xls  CSM Default Checklists.xls  LM Default Checklists.xls
Meshes/ProjectApollo/: LM_DescentStage.msh  SM-SIMBAY.msh
Orbitersdk/samples/ProjectApollo/: CMakeLists.txt  CMakeSettings.json  ProjectApollo2017.sln
Orbitersdk/samples/ProjectApollo/Project/ASTP/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/ApolloRTCCMFD/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/CMChute/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/Crawler/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/EVA/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/Flag/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/FloatBag/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/Floodlight/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/LC34/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/LC37/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/LCC/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/LEM/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/LES/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/LEVA/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/LRV/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/MCC/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/ML/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/MSS/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/PanelSDK/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/ProjectApolloConfigurator/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/ProjectApolloMFD/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/SIVB/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/Sat1bAbort1/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/Sat1bAbort2/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/Sat5Abort1/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/Sat5Abort2/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/Sat5Abort3/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/Sat5LMDSC/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/Saturn1B/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/Saturn5/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/Skylab/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/VAB/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/s1b/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/s1c/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/sii/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/sm/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/src_aux/ProjectApolloConfigurator/: ProjectApolloConfigurator.cpp
Orbitersdk/samples/ProjectApollo/src_csm/: CM_VC_Resource.h  EmissionListCMVC.h  csm_telecom.cpp  csm_telecom.h  csmcautionwarning.cpp  csmcautionwarning.h  csmsensors.cpp  csmsensors.h  resource.h  satswitches.cpp  satswitches.h  satsystems.cpp  saturn.cpp  saturn.h  saturnmesh.cpp  saturnpanel.cpp  saturnvc.cpp  sce.cpp
Orbitersdk/samples/ProjectApollo/src_launch/: LC34.cpp  LC34.h  LC37.cpp  LC37.h  LCC_MFD.cpp  LCC_MFD.h  MCC_Mission_G.cpp  RTCC_Mission_C_PRIME.cpp  RTCC_Mission_F.cpp  RTCC_Mission_G.cpp  RTCC_Mission_H1.cpp  rtcc.cpp  rtcc.h
Orbitersdk/samples/ProjectApollo/src_lm/: EmissionListLMVC.h  LEM.cpp  LEM.h  LEMcomputer.cpp  lempanel.cpp  lemswitches.cpp  lemsystems.cpp  lemvc.cpp  lm_ags.cpp  lm_dps.cpp  lm_scea.cpp  lm_telecom.h  lmresource.h  lmscs.cpp  lmscs.h
Orbitersdk/samples/ProjectApollo/src_mfd/: ProjectApolloChecklistMFD.h  ProjectApolloMFD.cpp  ProjectApolloMFD.h  ProjectApolloMFDButtons.cpp
Orbitersdk/samples/ProjectApollo/src_rtccmfd/: ARCore.cpp  ARoapiModule.cpp  ARoapiModule.h  ApolloRTCCMFD_Display.cpp  CoastNumericalIntegrator.cpp  EnckeIntegrator.cpp
Orbitersdk/samples/ProjectApollo/src_saturn/: Saturn1b.cpp  sivb.cpp  sivb.h
Orbitersdk/samples/ProjectApollo/src_sys/: apolloguidance.cpp  apolloguidance.h  dsky.cpp  dsky.h  missiontimer.cpp  missiontimer.h  nasspdefs.h  soundevents.cpp  soundevents.h  timingequipment.h
Orbitersdk/samples/ProjectApollo/src_sys/PanelSDK/Internals/: Esystems.cpp  Esystems.h  Hsysparse.cpp
Scenarios/Project Apollo - NASSP/: Apollo 7 - Launch.scn
Scenarios/Project Apollo - NASSP/Apollo - Mission Scenarios/Apollo 10/: Apollo 10 - 03 - After Insertion Checklist T+44min.scn  Apollo 10 - 04 - Before TLI T+2h20min.scn  Apollo 10 - 05 - Before CSM Separation T+3h.scn  Apollo 10 - 06 - Before MCC-1 TIG-15min.scn  Apollo 10 - 07 - Before LOI-1 TIG-15min.scn  Apollo 10 - 08 - Before LOI-2 TIG-15min.scn  Apollo 10 - 09 - Before LM Activation T+94h13min.scn  Apollo 10 - 10 - Before Undocking T+98h15min.scn  Apollo 10 - 11 - Before DOI TIG-6min.scn  Apollo 10 - 12 - Before Phasing TIG-6min.scn  Apollo 10 - 13 - Before Insertion TIG-11min.scn  Apollo 10 - 14 - Before CSI TIG-6min.scn  Apollo 10 - 15 - After Docking T+106h20min.scn
Scenarios/Project Apollo - NASSP/Apollo - Mission Scenarios/Apollo 11/: Apollo 11 - 03 - After Insertion Checklist T+1h.scn  Apollo 11 - 04 - Before TLI T+2h30min.scn  Apollo 11 - 05 - Before S-IVB Separation T+3h15min.scn  Apollo 11 - 06 - Before MCC-2 T+26h30min.scn  (+15 more)
Scenarios/Project Apollo - NASSP/WIP Scenarios/: Apollo 5 - Launch.scn
Script/: oapi_init.lua
Textures/ProjectApollo/VC/: AccelerometerCover.dds  Sextant_Eyepiece.dds  Telescope_Eyepiece.dds  digitaldisp90.dds  digitaldisp_2.dds  zzzStoff.dds
(+76 files in other folders)
